# misskappa

./: #ac1-paper.lyx#  .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README.qmd  ac1-paper.bib  ac1-paper.lyx  ac1-paper.lyx~  codecov.yml  justfile  kappa-missing.bib  kappa-missing.lyx  kappa-missing.lyx~  kappa-missing.tex  todo.md
.github/workflows/: ci.yml  coverage.yml  docs.yml
R/: chisq_data.R  functions.R  plot_chisq.R  plot_chisq_marginal_guessing.R  plot_chisq_perreault_leigh.R  testing_chisq_perreault_leigh.R  zapf.rds
code/analysis/: .gitignore  README.md  misskappa_package_example.R  simulations_raw_three_estimators.R
code/misskappa/: .RData  .Rbuildignore  .Rhistory  AUDIT.md  DESCRIPTION  NAMESPACE
dev/: cpp-coverage.sh  r-coverage.R  r-makevars-dev  vendor-cpp.sh
dev/bench/: nt-fiml.R
dev/legacy/: Justfile  README.md  todo.md
dev/notes/: alpha-cat-fiml-triage.md  alpha-missing-simulation-study.md  api-redesign-handoff.md  component-separable-vector-kappa.md  counts-weighting-fc-gls.md  crackles-vector-kappa.md  port-plan.md  quadratic-estimator-story.md  quadratic-vector-tensor-kappa.md  todo.md  validation-plan.md  vector-kappa-protopaper.md
docs/: Doxyfile
experiments/: AGENTS.md  INDEX.md  todo.md
experiments/01-coverage-iif-louis/: README.md  report.qmd  run_experiment.R
experiments/02-rater-model-sensitivity/: README.md  report.qmd  run_experiment.R
experiments/03-ac-vs-ipw-efficiency/: README.md  report.qmd  run_experiment.R
experiments/04-counts-sampling-misspec/: README.md  report.qmd  run_experiment.R
experiments/05-fiml-sparsity-scaling/: README.md  report.qmd  run_experiment.R
experiments/06-raw-estimator-scaling/: README.md  report.qmd  run_experiment.R
experiments/07-quadratic-edgeworth-coverage/: README.md  report.qmd  run_experiment.R
experiments/08-quadratic-bootstrap-literature/: README.md  report.qmd  run_experiment.R
experiments/09-joint-vcov-pilot/: README.md  report.qmd  run_experiment.R
experiments/10-louis-spectrum/: README.md  run_diagnostic.R
experiments/11-quadratic-delta-variance/: README.md  report.qmd
experiments/12-clean-mar-dgp/: README.md  report.qmd
experiments/12-quadratic-rare-disagreement/: README.md  report.qmd  run_experiment.R
experiments/13-quadratic-item-hurdle/: .gitignore  README.md  report.qmd
experiments/14-quadratic-mcar-verification/: README.md  report.qmd  run_experiment.R
notes/: README.md  ac1-paper-inf.lyx  ac1-paper.lyx  chisq_test_perreault_leigh.lyx  chisq_test_perreault_leigh.lyx~  comment-on-falotico-quatto.lyx~  gwet-case.tex  keep.lyx  missing-compatible-distributions.lyx  misskappa-package-example.tex  misskappa.lyx  misskappa.lyx~  multinomial.lyx.emergency.lyx  new-agreeement-def.lyx~  pairwise.lyx  pairwise.lyx~  pairwise_kee.lyx  paradox-free.lyx  revision-plan.md  simulations-raw-three-estimators.tex
paper/: .gitignore  AGENTS.md  STYLE.md  justfile  kappa-missing.tex
papers/: .gitignore  LICENSE
r-package/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  _pkgdown.yml
src/: detail_estimate_raw.hpp  detail_inverse_weights.cpp  detail_inverse_weights.hpp  detail_kernel_moments.hpp  detail_pattern_checks.hpp  detail_psd_inverse.hpp  estimate_alpha.cpp  estimate_continuous.cpp  estimate_counts.cpp  estimate_fiml.cpp  estimate_fiml_counts.cpp  estimate_gwise.cpp  estimate_normal_fiml.cpp  estimate_quadratic.cpp  estimate_quadratic_counts.cpp  estimate_raw.cpp  estimate_vector.cpp  fiml.cpp  loss.cpp
tests/: CMakeLists.txt
tests/unit/: alpha_test.cpp  available_test.cpp  continuous_test.cpp  counts_test.cpp  fiml_counts_test.cpp  fiml_test.cpp  gwise_test.cpp  ipw_gwet_test.cpp  loss_test.cpp  normal_fiml_test.cpp  quadratic_test.cpp  skeleton_test.cpp  tests_main.cpp  vector_test.cpp
(+665 files in other folders)
